bk_ida/gccida/c3/optimize_minmax_comparison
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4843:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4844:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4846:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code v16; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4847:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4849:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4851:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v21; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4852:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4857:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tt; // [rsp+0h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4898:20: error: expected expression
v22 = ( tree_node *)*( &global_trees + 12); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4898:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)*( &global_trees + 12); 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4939:20: error: expected expression
v22 = ( tree_node *)*( &global_trees + 11); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/fold-const.c:4939:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)*( &global_trees + 11); 
        ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/optimize_minmax_comparison/src/obj/fold-const.o] Error 1
